# HashTable

./: .gitignore  CMDParser.cpp  CMDParser.h  CMakeLists.txt  ErrorParser.cpp  ErrorParser.h  Hash  HashDump.txt  HashFunctions.cpp  HashFunctions.h  HashTable.cpp  HashTable.h  HashTableBench.cpp  HashTableBench.h  ListSearch.asm  Makefile  NonOptimizedTIcks.txt  README.md  RunBench  RunBench.cpp  Test.txt  TextPreprocessor.cpp  callgrind.out.49294  callgrind.out.50400  callgrind.out.52788  main.cpp  perf.data  perf.data.old
BenchData/: FirstOpt.py  FirstOptResult.txt  FirstOptTicks.txt  Naive.py  NaiveResult.txt  NaiveTicks.txt  SecondOpt.py  SecondOptResult.txt  SecondOptTicks.txt  ThirdOpt.py  ThirdOptResult.txt  ThirdOptTicks.txt
FalseNaive/: ErrorParser.h  Hash  HashTable.cpp  hash.cpp  hash.h  perf.data
FirstOpt/: Hash  HashDump.txt  HashTable.cpp  HashTable.h  HolyBible.txt  ListSearch.asm  Makefile  hash.cpp  main.cpp  perf.data  perf.data.old
FirstOptimization/: ErrorParser.cpp  Hash  HashDump.txt  HashTable.cpp  HashTable.h  Makefile  TextPreprocessor.h  hash.cpp  main.cpp  strcmp64byte.asm
HashOptimized/: HashTable.cpp  HashTableBench.cpp
Headers/: HashTable.h  HashTableBench.h
Naive/: ErrorParser.cpp  Hash  HashDump.txt  HashTable.cpp  HashTable.h  Makefile  UnholySemen.txt  hash.cpp  main.cpp  perf.data  perf.data.old
SecondOpt/: .gitignore  ErrorParser.h  Hash  HashTable.cpp  HashTable.h  HashTableBench.cpp  ListSearch.asm  Makefile  ReadyTohash.txt  main.cpp  perf.data  perf.data.old
TextPreprocessor/: Makefile
ThirdOpt/: ErrorParser.h  FileBufferizer.h  Hash  HashTable.cpp  HashTable.h  HashTableBench.h  LoadFactor.csv  Makefile  main.cpp  perf.data  perf.data.old
Unoptimized/: ErrorParser.cpp  FileBufferizer.cpp
src/: CMDParser.cpp  ErrorParser.cpp  FileBufferizer.cpp  main.cpp  (+3 more)
(+36 files in other folders)
